[package]
name = "code-statistics"
version = "1.0.0"
edition = "2021"
rust-version = "1.78.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.15.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
lazy_static = "1.4.0"
clap = { version = "4.0.27", features = ["derive"] }
sha256 = "1.1.1"
chrono = "0.4.23"
regex = "1.7.0"
anyhow = "1.0.70"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1